<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.eaarcenal.bn.activities.RegisterActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_email"
                android:inputType="textEmailAddress"
                android:hint="@string/register_email_address"
                android:layout_gravity="center_horizontal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_password"
                android:inputType="textPassword"
                android:hint="@string/register_password"
                android:layout_gravity="center_horizontal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/register_confirmpassword"
                android:inputType="textPassword"
                android:hint="@string/register_confirm_password"
                android:layout_gravity="center_horizontal" />
        </android.support.design.widget.TextInputLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_action_register"
            style="?android:textAppearanceSmall"
            android:textStyle="bold"
            android:id="@+id/register_register"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            style="?android:textAppearanceSmall"
            android:textStyle="bold"
            android:text="@string/register_action_cancel"
            android:id="@+id/register_cancel"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
